corregir chancaron mis cambios

--- a/Index.html
+++ b/Index.html
@@ -75,7 +75,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/uncharter.jpg"
+                src="./imagenes/peliculas/uncharter.jpg"
                 class="card-img-top"
                 style="width: 45.5%; margin: 0px auto"
                 alt="..."
@@ -98,7 +98,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/sonic.jpg"
+                src="./imagenes/peliculas/sonic.jpg"
                 class="card-img-top"
                 style="width: 40%; margin: 0px auto"
                 alt="..."
@@ -121,7 +121,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/morbius.jpg"
+                src="./imagenes/peliculas/morbius.jpg"
                 class="card-img-top"
                 style="width: 45.5%; margin: 0px auto"
                 alt="..."
@@ -146,7 +146,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/ns2.jpg"
+                src="./imagenes/peliculas/ns2.jpg"
                 class="card-img-top"
                 style="width: 45.5%; margin: 0px auto"
                 alt="..."
@@ -168,7 +168,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/lsd.jpg"
+                src="./imagenes/peliculas/lsd.jpg"
                 class="card-img-top"
                 style="width: 40%; margin: 0px auto"
                 alt="..."
@@ -192,7 +192,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/desesperada.jpg"
+                src="./imagenes/peliculas/desesperada.jpg"
                 class="card-img-top"
                 style="width: 44.5%; margin: 0px auto"
                 alt="..."
@@ -216,7 +216,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/cmon.jpg"
+                src="./imagenes/peliculas/cmon.jpg"
                 class="card-img-top"
                 style="width: 45.5%; margin: 0px auto"
                 alt="..."
@@ -238,7 +238,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/batman.jpg"
+                src="./imagenes/peliculas/batman.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -260,7 +260,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/apocalipsis.jpg"
+                src="./imagenes/peliculas/apocalipsis.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -292,7 +292,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/amigos.jpg"
+                src="./imagenes/proximamente/amigos.jpg"
                 class="card-img-top"
                 style="width: 40%; margin: 0px auto"
                 alt="..."
@@ -317,7 +317,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/ciudad.jpg"
+                src="./imagenes/proximamente/ciudad.jpg"
                 class="card-img-top"
                 style="width: 38.6%; margin: 0px auto"
                 alt="..."
@@ -342,7 +342,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/downton.jpg"
+                src="./imagenes/proximamente/downton.jpg"
                 class="card-img-top"
                 style="width: 42.9%; margin: 0px auto"
                 alt="..."
@@ -369,7 +369,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/exorcismo.jpg"
+                src="./imagenes/proximamente/exorcismo.jpg"
                 class="card-img-top"
                 style="width: 42.5%; margin: 0px auto"
                 alt="..."
@@ -394,7 +394,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/hombre.jpg"
+                src="./imagenes/proximamente/hombre.jpg"
                 class="card-img-top"
                 style="width: 40%; margin: 0px auto"
                 alt="..."
@@ -419,7 +419,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/jurassic.jpg"
+                src="./imagenes/proximamente/jurassic.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -446,7 +446,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/lago.jpg"
+                src="./imagenes/proximamente/lago.jpg"
                 class="card-img-top"
                 style="width: 45.5%; margin: 0px auto"
                 alt="..."
@@ -471,7 +471,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/lightyear.jpg"
+                src="./imagenes/proximamente/lightyear.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -496,7 +496,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/llamas.jpg"
+                src="./imagenes/proximamente/llamas.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -523,7 +523,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/lxi.jpg"
+                src="./imagenes/proximamente/lxi.jpg"
                 class="card-img-top"
                 style="width: 45.5%; margin: 0px auto"
                 alt="..."
@@ -548,7 +548,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/mascotas.jpg"
+                src="./imagenes/proximamente/mascotas.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -573,7 +573,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/minions.jpg"
+                src="./imagenes/proximamente/minions.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -600,7 +600,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/pequeño.jpg"
+                src="./imagenes/proximamente/pequeño.jpg"
                 class="card-img-top"
                 style="width: 45.5%; margin: 0px auto"
                 alt="..."
@@ -625,7 +625,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/strange.jpg"
+                src="./imagenes/proximamente/strange.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -652,7 +652,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/telefono.jpg"
+                src="./imagenes/proximamente/telefono.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
