--- a/vistas/vistas-peliculas.html
+++ b/vistas/vistas-peliculas.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style-peliculas.css" />
-    <link rel="stylesheet" href="./css/boots-peliculas.min.css" />
-    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./../css/style-peliculas.css" />
+    <link rel="stylesheet" href="./../css/boots-peliculas.min.css" />
+    <script src="./../js/boot-peliculas.min.js"></script>
   </head>
   <body>
     <header id="header">
@@ -15,7 +15,7 @@
         <div id="logo">
           <img
             class="imagen"
-            src="img/logo_BreakingClass.png"
+            src="./../img/logo_BreakingClass.png"
             title="Breaking movie"
           />
         </div>
@@ -75,7 +75,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/uncharter.jpg"
+                src="./../img/peliculas/uncharter.jpg"
                 class="card-img-top"
                 style="width: 45.5%; margin: 0px auto"
                 alt="..."
@@ -98,7 +98,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/sonic.jpg"
+                src="./../img/peliculas/sonic.jpg"
                 class="card-img-top"
                 style="width: 40%; margin: 0px auto"
                 alt="..."
@@ -121,7 +121,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/morbius.jpg"
+                src="./../img/peliculas/morbius.jpg"
                 class="card-img-top"
                 style="width: 45.5%; margin: 0px auto"
                 alt="..."
@@ -146,7 +146,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/ns2.jpg"
+                src="./../img/peliculas/ns2.jpg"
                 class="card-img-top"
                 style="width: 45.5%; margin: 0px auto"
                 alt="..."
@@ -168,7 +168,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/lsd.jpg"
+                src="./../img/peliculas/lsd.jpg"
                 class="card-img-top"
                 style="width: 40%; margin: 0px auto"
                 alt="..."
@@ -192,7 +192,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/desesperada.jpg"
+                src="./../img/peliculas/desesperada.jpg"
                 class="card-img-top"
                 style="width: 44.5%; margin: 0px auto"
                 alt="..."
@@ -216,7 +216,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/cmon.jpg"
+                src="./../img/peliculas/cmon.jpg"
                 class="card-img-top"
                 style="width: 45.5%; margin: 0px auto"
                 alt="..."
@@ -238,7 +238,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/batman.jpg"
+                src="./../img/peliculas/batman.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -260,7 +260,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/peliculas/apocalipsis.jpg"
+                src="./../img/peliculas/apocalipsis.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -292,7 +292,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/amigos.jpg"
+                src="./../img/proximamente/amigos.jpg"
                 class="card-img-top"
                 style="width: 40%; margin: 0px auto"
                 alt="..."
@@ -317,7 +317,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/ciudad.jpg"
+                src="./../img/proximamente/ciudad.jpg"
                 class="card-img-top"
                 style="width: 38.6%; margin: 0px auto"
                 alt="..."
@@ -342,7 +342,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/downton.jpg"
+                src="./../img/proximamente/downton.jpg"
                 class="card-img-top"
                 style="width: 42.9%; margin: 0px auto"
                 alt="..."
@@ -369,7 +369,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/exorcismo.jpg"
+                src="./../img/proximamente/exorcismo.jpg"
                 class="card-img-top"
                 style="width: 42.5%; margin: 0px auto"
                 alt="..."
@@ -394,7 +394,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/hombre.jpg"
+                src="./../img/proximamente/hombre.jpg"
                 class="card-img-top"
                 style="width: 40%; margin: 0px auto"
                 alt="..."
@@ -419,7 +419,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/jurassic.jpg"
+                src="./../img/proximamente/jurassic.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -446,7 +446,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/lago.jpg"
+                src="./../img/proximamente/lago.jpg"
                 class="card-img-top"
                 style="width: 45.5%; margin: 0px auto"
                 alt="..."
@@ -471,7 +471,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/lightyear.jpg"
+                src="./../img/proximamente/lightyear.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -496,7 +496,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/llamas.jpg"
+                src="./../img/proximamente/llamas.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -523,7 +523,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/lxi.jpg"
+                src="./../img/proximamente/lxi.jpg"
                 class="card-img-top"
                 style="width: 45.5%; margin: 0px auto"
                 alt="..."
@@ -548,7 +548,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/mascotas.jpg"
+                src="./../img/proximamente/mascotas.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -573,7 +573,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/minions.jpg"
+                src="./../img/proximamente/minions.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -600,7 +600,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/pequeño.jpg"
+                src="./../img/proximamente/pequeño.jpg"
                 class="card-img-top"
                 style="width: 45.5%; margin: 0px auto"
                 alt="..."
@@ -625,7 +625,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/strange.jpg"
+                src="./../img/proximamente/strange.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -652,7 +652,7 @@
           <div class="col-4">
             <div class="card" style="width: 100%">
               <img
-                src="./img/proximamente/telefono.jpg"
+                src="./../img/proximamente/telefono.jpg"
                 class="card-img-top"
                 style="width: 41.5%; margin: 0px auto"
                 alt="..."
@@ -726,10 +726,10 @@
               </p>
               <p id="store">
                   <a href="#">
-                      <img class="icon" src="img/play store.png" alt="Cargando imagen">
+                      <img class="icon" src="./../img/play store.png" alt="Cargando imagen">
                   </a>
                   <a href="#">
-                      <img class="icon" src="img/app store.png" alt="Cargando Imagen">
+                      <img class="icon" src="./../img/app store.png" alt="Cargando Imagen">
                   </a>
               </p>
 
