--- a/vistas/somos.html
+++ b/vistas/somos.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Breaking movie Espanol</title>
-    <link rel="icon" type="favicon/x-icon" href="img/Logo.png">
-    <link rel="stylesheet" type="text/css" href="css/style-somos.css">
+    <link rel="icon" type="favicon/x-icon" href="../img/Logo.png">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style-somos.css">
 </head>
 
 <body>
@@ -13,20 +14,21 @@
     <header id="header">
         <div class="wrap">
             <div id="logo">
-                <img class="imagen" src="img/Logo.png" title="Breaking movie">
+                <a href="../Index.html"><img class="imagen" src="../img/logo.png" title="Breaking movie"></a>                
             </div>
             <nav id="menu">
                 <ul>
-                    <li><a href="#">PELICULA</a></li>
-                    <li><a href="#">CINES</a></li>
-                    <li><a href="#">DULCERIA/PROMOCIONES</a></li>
-                    <li><a href="#">CONTACTO</a></li>
-                    <li><a href="#">LOGIN</a></li>
+                    <li><a href="../vistas/vistas-peliculas.html">PELICULAS</a></li>
+                    <li><a href="../vistas/Lugares.html">CINES</a></li>
+                    <li><a href="../vistas/vistas-promociones.html">DULCERIA/PROMOCIONES</a></li>
+                    <li><a href="../vistas/contacto.html">CONTACTO</a></li>
+                    <li><a href="../vistas/login.html">LOGIN</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <!--FIN DE CABECARA-->
+    <div class="clearfix"></div>
 
     <!--INICIO DE BODY-->
     <section class="wrap">
@@ -55,7 +57,7 @@
         <section id="info">
             <div id="cards">
                 <div class="card">
-                    <img class="icon" src="img/nuestro proposito.jpg" alt="cargando imagen...">
+                    <img class="icon" src="../img/nuestro proposito.jpg" alt="cargando imagen...">
                     <h2 class="category">Nuestro proposito</h2>
                     <p class="descripcion">
                         Transformar un dia en historias extraordinarias
@@ -64,7 +66,7 @@
             </div>
             <div id="cards">
                 <div class="card">
-                    <img class="icon" src="img/mision-vision.jpg" alt="cargando imagen...">
+                    <img class="icon" src="../img/mision-vision.jpg" alt="cargando imagen...">
                     <h2 class="category">Vision y mision</h2>
                     <p class="descripcion">
                         Ser la opción de entretenimiento que impacte positivamente en la vida de las personas y la
@@ -74,7 +76,7 @@
             </div>
             <div id="cards">
                 <div class="card">
-                    <img class="icon" src="img/Clima-Laboral.png" alt="cargando imagen...">
+                    <img class="icon" src="../img/Clima-Laboral.png" alt="cargando imagen...">
                     <h2 class="category">Clima laboral</h2>
                     <p class="descripcion">
                         Desde hace 10 años somos parte del ranking GPTW. En el 2017 ocupamos el 2do lugar, gracias al
@@ -85,7 +87,7 @@
             </div>
             <div id="cards">
                 <div class="card">
-                    <img class="icon" src="img/Clima-Laboral.png" alt="cargando imagen...">
+                    <img class="icon" src="../img/Clima-Laboral.png" alt="cargando imagen...">
                     <h2 class="category">Mas informacion al</h2>
                     <p class="descripcion">
                         Desde hace 10 años somos parte del ranking GPTW. En el 2017 ocupamos el 2do lugar, gracias al
@@ -155,10 +157,10 @@
                 </p>
                 <p id="store">
                     <a href="#">
-                        <img class="icon" src="img/play store.png" alt="Cargando imagen">
+                        <img class="icon" src="../img/play store.png" alt="Cargando imagen">
                     </a>
                     <a href="#">
-                        <img class="icon" src="img/app store.png" alt="Cargando Imagen">
+                        <img class="icon" src="../img/app store.png" alt="Cargando Imagen">
                     </a>
                 </p>
 
