--- a/vistas/vistas-peliculas.html
+++ b/vistas/vistas-peliculas.html
@@ -4,32 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Peliculas</title>
+    <link rel="icon" type="favicon/x-icon" href="../img/Logo.png">
+    <link rel="stylesheet" href="./../css/style.css"/>
     <link rel="stylesheet" href="./../css/style-peliculas.css" />
     <link rel="stylesheet" href="./../css/boots-peliculas.min.css" />
     <script src="./../js/boot-peliculas.min.js"></script>
   </head>
   <body>
+    <!--INICIO DE CABECERA-->
     <header id="header">
       <div class="wrap">
-        <div id="logo">
-          <img
-            class="imagen"
-            src="./../img/logo_BreakingClass.png"
-            title="Breaking movie"
-          />
-        </div>
-        <nav id="menu">
-          <ul>
-            <li><a href="#">PELICULAS</a></li>
-            <li><a href="#">CINES</a></li>
-            <li><a href="#">DULCERIA/PROMOCIONES</a></li>
-            <li><a href="#">CONTACTO</a></li>
-            <li><a href="#">LOGIN</a></li>
-          </ul>
-        </nav>
+          <div id="logo">
+              <a href="../Index.html"><img class="imagen" src="../img/logo.png" title="Breaking movie"></a>                
+          </div>
+          <nav id="menu">
+              <ul>
+                  <li><a href="../vistas/vistas-peliculas.html">PELICULAS</a></li>
+                  <li><a href="../vistas/Lugares.html">CINES</a></li>
+                  <li><a href="../vistas/vistas-promociones.html">DULCERIA/PROMOCIONES</a></li>
+                  <li><a href="../vistas/contacto.html">CONTACTO</a></li>
+                  <li><a href="../vistas/login.html">LOGIN</a></li>
+              </ul>
+          </nav>
       </div>
-    </header>
+  </header>
+  <!--FIN DE CABECARA-->
+  
 
     <div class="container">
       <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -602,7 +603,7 @@
               <img
                 src="./../img/proximamente/pequeño.jpg"
                 class="card-img-top"
-                style="width: 45.5%; margin: 0px auto"
+                style="width: 31%; margin: 0px auto"
                 alt="..."
               />
               <div class="card-body">
@@ -678,11 +679,12 @@
       </div>
     </div>
 
+    <!---INICIO DE PIE DE PAGINA-->
     <footer id="footer">
       <div class="wrap">
           <div id="menu-footer">
               <ul>
-                  <li><a href="#">Nosotros</a></li>
+                  <li><a href="./somos.html">Nosotros</a></li>
                   <li><a href="#">Trabaja con nosotros</a></li>
                   <li><a href="#">Politicas de privacidad</a></li>
               </ul>
@@ -726,10 +728,10 @@
               </p>
               <p id="store">
                   <a href="#">
-                      <img class="icon" src="./../img/play store.png" alt="Cargando imagen">
+                      <img class="icon" src="../img/playstore.png" alt="Cargando imagen">
                   </a>
                   <a href="#">
-                      <img class="icon" src="./../img/app store.png" alt="Cargando Imagen">
+                      <img class="icon" src="../img/appstore.png" alt="Cargando Imagen">
                   </a>
               </p>
 
@@ -740,9 +742,9 @@
               </p>
           </div>
       </div>
-
       </div>
   </footer>
+  <!--FIN DE PIE DE PAGINA-->
 
     <div
       class="modal fade"
@@ -775,6 +777,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="363"
               src="https://www.youtube.com/embed/kVgsnqAp0Kk"
               title="YouTube video player"
@@ -819,6 +822,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="363"
               src="https://www.youtube.com/embed/mgnMoJ1FERw"
               title="YouTube video player"
@@ -861,6 +865,7 @@
 
             <iframe
               width="465"
+allowTransparency="true"
               height="363"
               src="https://www.youtube.com/embed/C4XP8FSqTTE"
               title="YouTube video player"
@@ -905,6 +910,7 @@
 
             <iframe
               width="465"
+allowTransparency="true"
               height="295"
               src="https://www.youtube.com/embed/oMEcBqi4JIQ"
               title="YouTube video player"
@@ -947,6 +953,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/Rp7YtN_094I"
               title="YouTube video player"
@@ -991,6 +998,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/5Ca1mXFv2Fc"
               title="YouTube video player"
@@ -1038,6 +1046,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/0GnOo5-j4Ok"
               title="YouTube video player"
@@ -1080,6 +1089,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/FUP3P9_mqvA"
               title="YouTube video player"
@@ -1124,6 +1134,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/jwgivthghxI"
               title="YouTube video player"
@@ -1168,6 +1179,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/o_RbCZ8ygEI"
               title="YouTube video player"
@@ -1214,6 +1226,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/Jhl2v32cKzc"
               title="YouTube video player"
@@ -1255,6 +1268,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/YPrNs8E-t8E"
               title="YouTube video player"
@@ -1296,6 +1310,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/doIF9xZJs_s"
               title="YouTube video player"
@@ -1343,6 +1358,7 @@
 
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/7HZ4tBQEiB0"
               title="YouTube video player"
@@ -1391,6 +1407,7 @@
 
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/9m9yRauMJIQ"
               title="YouTube video player"
@@ -1439,6 +1456,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/zVbl836Mfro"
               title="YouTube video player"
@@ -1484,6 +1502,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/osWSqDwQQKk"
               title="YouTube video player"
@@ -1526,6 +1545,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="360"
               src="https://www.youtube.com/embed/lKLqrpYNfnA"
               title="YouTube video player"
@@ -1571,6 +1591,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/xzhz1PjCigI"
               title="YouTube video player"
@@ -1612,6 +1633,7 @@
 
             <iframe
               width="465"
+allowTransparency="true"
               height="294"
               src="https://www.youtube.com/embed/GaYnSNaQYCY"
               title="YouTube video player"
@@ -1656,6 +1678,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/1jkw2JPCl18"
               title="YouTube video player"
@@ -1707,6 +1730,7 @@
 
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/MO019NU9XUk"
               title="YouTube video player"
@@ -1756,6 +1780,7 @@
 
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/VJ9k7uKmdSk"
               title="YouTube video player"
@@ -1804,6 +1829,7 @@
 
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/KREBGtEeW9U"
               title="YouTube video player"
@@ -1849,6 +1875,7 @@
             <br />
             <iframe
               width="465"
+allowTransparency="true"
               height="395"
               src="https://www.youtube.com/embed/kQ3EMxTAwXY"
               title="YouTube video player"
