--- a/vistas/vistas-promociones.html
+++ b/vistas/vistas-promociones.html
@@ -14,15 +14,15 @@
 <header id="header">
     <div class="wrap">
         <div id="logo">
-            <img class="imagen" src="../img/logo.png" title="Breaking movie">
+            <a href="../Index.html"><img class="imagen" src="../img/logo.png" title="Breaking movie"></a>                
         </div>
         <nav id="menu">
             <ul>
-                <li><a href="#">PELICULAS</a></li>
-                <li><a href="#">CINES</a></li>
-                <li><a href="#">DULCERIA/PROMOCIONES</a></li>
-                <li><a href="#">CONTACTO</a></li>
-                <li><a href="#">LOGIN</a></li>
+                <li><a href="../vistas/vistas-peliculas.html">PELICULAS</a></li>
+                <li><a href="../vistas/Lugares.html">CINES</a></li>
+                <li><a href="../vistas/vistas-promociones.html">DULCERIA/PROMOCIONES</a></li>
+                <li><a href="../vistas/contacto.html">CONTACTO</a></li>
+                <li><a href="../vistas/login.html">LOGIN</a></li>
             </ul>
         </nav>
     </div>
@@ -128,7 +128,7 @@
         <div class="wrap">
             <div id="menu-footer">
                 <ul>
-                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="./somos.html">Nosotros</a></li>
                     <li><a href="#">Trabaja con nosotros</a></li>
                     <li><a href="#">Politicas de privacidad</a></li>
                 </ul>
@@ -164,7 +164,7 @@
                         Atencion de consultas o incidencias por favor Contactenos
                     </p>
                 </div>
-
+  
             </div>
             <div id="info-footer">
                 <p class="info-sociales">
@@ -172,13 +172,13 @@
                 </p>
                 <p id="store">
                     <a href="#">
-                        <img class="icon" src="../img/play store.png" alt="Cargando imagen">
+                        <img class="icon" src="../img/playstore.png" alt="Cargando imagen">
                     </a>
                     <a href="#">
-                        <img class="icon" src="../img/app store.png" alt="Cargando Imagen">
+                        <img class="icon" src="../img/appstore.png" alt="Cargando Imagen">
                     </a>
                 </p>
-
+  
                 <h2>Informacion publica de Breaking Movie</h2>
                 <p class="info-sociales">
                     Para acceder a nuestra información pública que se difunde en el Portal del Mercado de Valores hacer
@@ -186,7 +186,6 @@
                 </p>
             </div>
         </div>
-
         </div>
     </footer>
     <!--FIN DE PIE DE PAGINA-->
