--- a/vistas/somos.html
+++ b/vistas/somos.html
@@ -4,31 +4,75 @@
 <head>
     <meta charset="UTF-8">
     <title>Breaking movie Espanol</title>
-    <link rel="icon" type="favicon/x-icon" href="../img/Logo.png">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="../css/style-somos.css">
+    <link rel="icon" type="favicon/x-icon" href="img/Logo.png">
+    <link rel="stylesheet" type="text/css" href="css/style-somos.css">
 </head>
 
 <body>
+    <!--Ventana emergente-->
+    <div class="ventana" id="vent">
+        <div id="cerrar">
+            <a href="#" onclick="cerrar()">
+                <img src="img/cerrar.png" alt="Cerrar">
+            </a>
+        </div>
+        <p id="parrafo1">1Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce maximus commodo odio id
+            placerat. Sed quis
+            enim sagittis tellus vestibulum ullamcorper. Sed mollis et sem nec venenatis. Nunc tristique commodo diam,
+            at ultrices libero vestibulum ut. Fusce eu pharetra augue, egestas vestibulum justo. Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit. Quisque sed mollis augue. Curabitur hendrerit erat nec posuere laoreet.
+            Ut quis purus non erat porttitor pulvinar pulvinar in odio. Vestibulum aliquam sem a nisi dignissim luctus.
+            Vestibulum volutpat viverra enim, vitae laoreet ante molestie et. Sed in odio ante. Etiam sollicitudin
+            pellentesque suscipit. Cras non accumsan erat.
+        </p>
+        <p id="parrafo2" class="1">2Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce maximus commodo odio id
+            placerat. Sed quis
+            enim sagittis tellus vestibulum ullamcorper. Sed mollis et sem nec venenatis. Nunc tristique commodo diam,
+            at ultrices libero vestibulum ut. Fusce eu pharetra augue, egestas vestibulum justo. Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit. Quisque sed mollis augue. Curabitur hendrerit erat nec posuere laoreet.
+            Ut quis purus non erat porttitor pulvinar pulvinar in odio. Vestibulum aliquam sem a nisi dignissim luctus.
+            Vestibulum volutpat viverra enim, vitae laoreet ante molestie et. Sed in odio ante. Etiam sollicitudin
+            pellentesque suscipit. Cras non accumsan erat.
+        </p>
+        <p id="parrafo3">3Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce maximus commodo odio id
+            placerat. Sed quis
+            enim sagittis tellus vestibulum ullamcorper. Sed mollis et sem nec venenatis. Nunc tristique commodo diam,
+            at ultrices libero vestibulum ut. Fusce eu pharetra augue, egestas vestibulum justo. Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit. Quisque sed mollis augue. Curabitur hendrerit erat nec posuere laoreet.
+            Ut quis purus non erat porttitor pulvinar pulvinar in odio. Vestibulum aliquam sem a nisi dignissim luctus.
+            Vestibulum volutpat viverra enim, vitae laoreet ante molestie et. Sed in odio ante. Etiam sollicitudin
+            pellentesque suscipit. Cras non accumsan erat.
+        </p>
+        <p id="parrafo4">4Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce maximus commodo odio id
+            placerat. Sed quis
+            enim sagittis tellus vestibulum ullamcorper. Sed mollis et sem nec venenatis. Nunc tristique commodo diam,
+            at ultrices libero vestibulum ut. Fusce eu pharetra augue, egestas vestibulum justo. Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit. Quisque sed mollis augue. Curabitur hendrerit erat nec posuere laoreet.
+            Ut quis purus non erat porttitor pulvinar pulvinar in odio. Vestibulum aliquam sem a nisi dignissim luctus.
+            Vestibulum volutpat viverra enim, vitae laoreet ante molestie et. Sed in odio ante. Etiam sollicitudin
+            pellentesque suscipit. Cras non accumsan erat.
+        </p>
+
+    </div>
+    <!--Fin de ventana emergente-->
     <!--INICIO DE CABECERA-->
     <header id="header">
         <div class="wrap">
             <div id="logo">
-                <a href="../Index.html"><img class="imagen" src="../img/logo.png" title="Breaking movie"></a>                
+                <img class="imagen" src="img/Logo.png" title="Breaking movie">
             </div>
             <nav id="menu">
                 <ul>
-                    <li><a href="../vistas/vistas-peliculas.html">PELICULAS</a></li>
-                    <li><a href="../vistas/Lugares.html">CINES</a></li>
-                    <li><a href="../vistas/vistas-promociones.html">DULCERIA/PROMOCIONES</a></li>
-                    <li><a href="../vistas/contacto.html">CONTACTO</a></li>
-                    <li><a href="../vistas/login.html">LOGIN</a></li>
+                    <li><a href="#">PELICULA</a></li>
+                    <li><a href="#">CINES</a></li>
+                    <li><a href="#">DULCERIA/PROMOCIONES</a></li>
+                    <li><a href="#">CONTACTO</a></li>
+                    <li><a href="#">LOGIN</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <!--FIN DE CABECARA-->
-    <div class="clearfix"></div>
 
     <!--INICIO DE BODY-->
     <section class="wrap">
@@ -56,8 +100,8 @@
     <section class="medio">
         <section id="info">
             <div id="cards">
-                <div class="card">
-                    <img class="icon" src="../img/nuestro proposito.jpg" alt="cargando imagen...">
+                <div class="card" id="card1" onclick="abrir(1)">
+                    <img class="icon" src="img/nuestro proposito.jpg" alt="cargando imagen...">
                     <h2 class="category">Nuestro proposito</h2>
                     <p class="descripcion">
                         Transformar un dia en historias extraordinarias
@@ -65,8 +109,8 @@
                 </div>
             </div>
             <div id="cards">
-                <div class="card">
-                    <img class="icon" src="../img/mision-vision.jpg" alt="cargando imagen...">
+                <div class="card" onclick="abrir(2)">
+                    <img class="icon" src="img/mision-vision.jpg" alt="cargando imagen...">
                     <h2 class="category">Vision y mision</h2>
                     <p class="descripcion">
                         Ser la opción de entretenimiento que impacte positivamente en la vida de las personas y la
@@ -75,8 +119,8 @@
                 </div>
             </div>
             <div id="cards">
-                <div class="card">
-                    <img class="icon" src="../img/Clima-Laboral.png" alt="cargando imagen...">
+                <div class="card" onclick="abrir(3)">
+                    <img class="icon" src="img/Clima-Laboral.png" alt="cargando imagen...">
                     <h2 class="category">Clima laboral</h2>
                     <p class="descripcion">
                         Desde hace 10 años somos parte del ranking GPTW. En el 2017 ocupamos el 2do lugar, gracias al
@@ -86,8 +130,8 @@
                 </div>
             </div>
             <div id="cards">
-                <div class="card">
-                    <img class="icon" src="../img/Clima-Laboral.png" alt="cargando imagen...">
+                <div class="card" onclick="abrir(4)">
+                    <img class="icon" src="img/Clima-Laboral.png" alt="cargando imagen...">
                     <h2 class="category">Mas informacion al</h2>
                     <p class="descripcion">
                         Desde hace 10 años somos parte del ranking GPTW. En el 2017 ocupamos el 2do lugar, gracias al
@@ -157,10 +201,10 @@
                 </p>
                 <p id="store">
                     <a href="#">
-                        <img class="icon" src="../img/play store.png" alt="Cargando imagen">
+                        <img class="icon" src="img/play store.png" alt="Cargando imagen">
                     </a>
                     <a href="#">
-                        <img class="icon" src="../img/app store.png" alt="Cargando Imagen">
+                        <img class="icon" src="img/app store.png" alt="Cargando Imagen">
                     </a>
                 </p>
 
@@ -175,5 +219,7 @@
         </div>
     </footer>
     <!--FIN DE PIE DE PAGINA-->
+    <script src="js/hacer.js"></script>
 </body>
+
 </html>
